--- a/outputsheets/d20/fantasy/htmlxml/csheet_fantasy_combined.htm
+++ b/outputsheets/d20/fantasy/htmlxml/csheet_fantasy_combined.htm
@@ -2734,7 +2734,7 @@ function RemoveStat (attribute) {
 </script>
 </head>
 <body onload="Compact();">
-<span class="header">Created using PCGen |EXPORT.VERSION| on |EXPORT.DATE|</span>
+<span class="header">Created using PCGen |EXPORT.VERSION| on |EXPORT.DATE| <br>Player: |PLAYERNAME|; Character Name: |NAME|</span>
 |%VAR.RageTimes.GTEQ.1|
 <script language="javascript" type="text/javascript">OneTimeBbnLevelParse();</script>
 |%|
