--- a/outputsheets/d20/fantasy/htmlxml/csheet_fantasy_statblock1.htm
+++ b/outputsheets/d20/fantasy/htmlxml/csheet_fantasy_statblock1.htm
@@ -19,7 +19,7 @@ $Date$
 </style>
 </head>
 <body>
-<span class="header">Created using PCGen |EXPORT.VERSION| on |EXPORT.DATE|</span>
+<span class="header">Created using PCGen |EXPORT.VERSION| on |EXPORT.DATE| <br>Player: |PLAYERNAME|; Character Name: |NAME|</span>
 <p>
   <b>|NAME|<br />
 |GENDER.LONG| |RACE|; |SIZELONG|
