--- a/outputsheets/d20/fantasy/htmlxml/csheet_fantasy_statblock3.htm
+++ b/outputsheets/d20/fantasy/htmlxml/csheet_fantasy_statblock3.htm
@@ -25,7 +25,7 @@ $Date$
 </head>
 <body>
 <!--
-<span class="header">Created using PCGen |EXPORT.VERSION| on |EXPORT.DATE|</span>
+<span class="header">Created using PCGen |EXPORT.VERSION| on |EXPORT.DATE| <br>Player: |PLAYERNAME|; Character Name: |NAME|</span>
 -->
 <b>|NAME|:</b> |GENDER||RACE||%REGION| From |REGION|.|%| |CLASSLIST| ;
 CR |CR|; |SIZELONG| 
