--- a/outputsheets/d20/fantasy/htmlxml/csheet_fantasy_statblock4.htm
+++ b/outputsheets/d20/fantasy/htmlxml/csheet_fantasy_statblock4.htm
@@ -891,7 +891,7 @@ at will)
 |ENDFOR|
 
 
-<br><span class="header">Created using PCGen |EXPORT.VERSION| on |EXPORT.DATE|</span>
+<br><span class="header">Created using PCGen |EXPORT.VERSION| on |EXPORT.DATE| <br>Player: |PLAYERNAME|; Character Name: |NAME|</span>
 <!-- ================================================================= -->
 
 </body>
