--- a/outputsheets/d20/fantasy/htmlxml/csheet_fantasy_troubleshooting.htm
+++ b/outputsheets/d20/fantasy/htmlxml/csheet_fantasy_troubleshooting.htm
@@ -18,7 +18,7 @@ $Date: 2007/03/08 18:57:54 $
 </head>
 <body>
 <!--
-<span class="header">Created using PCGen |EXPORT.VERSION| on |EXPORT.DATE|</span>
+<span class="header">Created using PCGen |EXPORT.VERSION| on |EXPORT.DATE| <br>Player: |PLAYERNAME|; Character Name: |NAME|</span>
 -->
 <b>|NAME|</b><br>
 |GENDER| |RACE|; 
