--- a/outputsheets/d20/modern/htmlxml/psheet_modern_std.htm
+++ b/outputsheets/d20/modern/htmlxml/psheet_modern_std.htm
@@ -34,7 +34,7 @@ $Date$
 </style>
 </head>
 <body>
-<span class="header">Created using PCGen |EXPORT.VERSION| on |EXPORT.DATE|</span>
+<span class="header">Created using PCGen |EXPORT.VERSION| on |EXPORT.DATE| <br>Player: |PLAYERNAME|; Character Name: |NAME|</span>
 <table border="0" cellspacing="0" width="100%" summary="Party Master Table">
 |FOR.0,50,2,
 <td class="lt10s" width="50%">
