--- a/outputsheets/d20/sciencefiction/htmlxml/csheet_dw2_std.htm
+++ b/outputsheets/d20/sciencefiction/htmlxml/csheet_dw2_std.htm
@@ -62,7 +62,7 @@
 </style>
 </head>
 <body bgcolor="white">
-<center><font size="-1">Created using PCGen |EXPORT.VERSION| on |EXPORT.DATE|</font></center><br />
+<center><font size="-1">Created using PCGen |EXPORT.VERSION| on |EXPORT.DATE|<br>Player: |PLAYERNAME|; Character Name: |NAME|</font></center><br />
 <!-- START Top Character Data -->
 <table summary="formatting table" cellpadding="0" cellspacing="4" border="0" width="100%">
  <tr>
@@ -805,7 +805,7 @@
 
 <!-- ================================================================ -->
 <br style="page-break-after: always" />
-<center><font size="-1">Created using PCGen |EXPORT.VERSION| on |EXPORT.DATE|</font></center><br />
+<center><font size="-1">Created using PCGen |EXPORT.VERSION| on |EXPORT.DATE| <br>Player: |PLAYERNAME|; Character Name: |NAME|</font></center><br />
 <table summary="formatting table" width="100%" border=0>
 <tr>
 <td colspan=2 width="100%" valign="top">
@@ -1685,7 +1685,7 @@
 
 |%BIO|
 <br style="page-break-after: always" />
-<center><font size="-1">Created using PCGen |EXPORT.VERSION| on |EXPORT.DATE|</font></center><br />
+<center><font size="-1">Created using PCGen |EXPORT.VERSION| on |EXPORT.DATE| <br>Player: |PLAYERNAME|; Character Name: |NAME|</font></center><br />
 <a name="Bio"></a>
 <!-- START Bio Table -->
 <table summary="formatting table" width="100%" cellspacing="0" cellpadding="2">
