--- a/outputsheets/d20/western/htmlxml/csheetSidewinder.htm
+++ b/outputsheets/d20/western/htmlxml/csheetSidewinder.htm
@@ -61,7 +61,7 @@
 </style>
 </head>
 <body bgcolor="white">
-<center><font size="-1">Created using PCGen |EXPORT.VERSION| on |EXPORT.DATE|</font></center><br>
+<center><font size="-1">Created using PCGen |EXPORT.VERSION| on |EXPORT.DATE| <br>Player: |PLAYERNAME|; Character Name: |NAME|</font></center><br />
 <!-- START Top Character Data -->
 <table summary="formatting table" cellpadding="0" cellspacing="4" border="0" width="100%">
  <tr>
@@ -798,7 +798,7 @@
 
 <!-- ================================================================ -->
 <br style="page-break-after: always" />
-<center><font size="-1">Created using PCGen |EXPORT.VERSION| on |EXPORT.DATE|</font></center><br>
+<center><font size="-1">Created using PCGen |EXPORT.VERSION| on |EXPORT.DATE| <br>Player: |PLAYERNAME|; Character Name: |NAME|</font></center><br />
 <table summary="formatting table" width="100%" border=0>
 <tr>
 <td colspan=2 width="100%" valign="top">
@@ -1544,7 +1544,7 @@
 	<!-- No innate spells -->
 |ELSE|
 <br style="page-break-after: always" />
-<center><font size="-1">Created using PCGen |EXPORT.VERSION| on |EXPORT.DATE|</font></center><br>
+<center><font size="-1">Created using PCGen |EXPORT.VERSION| on |EXPORT.DATE| <br>Player: |PLAYERNAME|; Character Name: |NAME|</font></center><br />
 |FOR,%spellbook,1,1,1,1|
 |FOR,%class,0,0,1,1|
 |FOR,%level,0,0,1,1|
@@ -1634,7 +1634,7 @@
 <!-- End Innate Spells -->
 |FOR,%spellbook,0,0,1,0|
 <br style="page-break-after: always" />
-<center><font size="-1">Created using PCGen |EXPORT.VERSION| on |EXPORT.DATE|</font></center><br>
+<center><font size="-1">Created using PCGen |EXPORT.VERSION| on |EXPORT.DATE| <br>Player: |PLAYERNAME|; Character Name: |NAME|</font></center><br />
 |FOR,%class,COUNT[SPELLRACE],COUNT[SPELLRACE]+COUNT[CLASSES]-1,1,1|
 |%SPELLLISTCLASS.%class|
 <!-- START Spell list Header Table (Known) -->
@@ -1736,7 +1736,7 @@
 |FOR,%level,0,0,1,0|
 |%SPELLLISTBOOK.%class.%level.%spellbook|
 <br style="page-break-after: always" />
-<center><font size="-1">Created using PCGen |EXPORT.VERSION| on |EXPORT.DATE|</font></center><br>
+<center><font size="-1">Created using PCGen |EXPORT.VERSION| on |EXPORT.DATE| <br>Player: |PLAYERNAME|; Character Name: |NAME|</font></center><br />
 <table width="100%" cellspacing="0" cellpadding="2" summary="Spell List">
  <tr>
   <td colspan="11" align="center" bgcolor="black"><font color="white"><b>Racial Innate</b></font></td>
@@ -1806,7 +1806,7 @@
 |IIF(%foo:0.OR.%bar:0)|
 <!-- Either we do not have a innate race, or if we do we do not have any 0 level spell for the innate race -->
 <br style="page-break-after: always" />
-<center><font size="-1">Created using PCGen |EXPORT.VERSION| on |EXPORT.DATE|</font></center><br>
+<center><font size="-1">Created using PCGen |EXPORT.VERSION| on |EXPORT.DATE| <br>Player: |PLAYERNAME|; Character Name: |NAME|</font></center><br />
 <table width="100%" cellspacing="0" cellpadding="2" summary="Spell List">
  <tr>
   <td colspan="11" align="center" bgcolor="black"><font color="white"><b>|SPELLBOOKNAME.%spellbook|</b></font></td>
@@ -1893,7 +1893,7 @@
 |%BIO|
 
 <br style="page-break-after: always" />
-<center><font size="-1">Created using PCGen |EXPORT.VERSION| on |EXPORT.DATE|</font></center><br>
+<center><font size="-1">Created using PCGen |EXPORT.VERSION| on |EXPORT.DATE| <br>Player: |PLAYERNAME|; Character Name: |NAME|</font></center><br />
 
 <A name="Bio"></A>
 <!-- START Bio Table -->
