--- a/preview/d20/modern/standard_new.htm
+++ b/preview/d20/modern/standard_new.htm
@@ -445,64 +445,172 @@
 </table>
 <!-- STOP Saving Throws Table -->
 <!-- START Melee and Range Attack Table -->
-<table summary="formatting table" width="100%">
-<tr>
-<td align="center"></td>
-<td align="center" width="60" class="font4">TOTAL</td>
-<td align="center"></td>
-<td align="center" width="60" class="font4">BASE ATTACK BONUS</td>
-<td align="center"></td>
-<td align="center" width="25" class="font4">STR<br />MODIFIER</td>
-<td align="center"></td>
-<td align="center" width="25" class="font4">SIZE<br />MODIFIER</td>
-<td align="center"></td>
-<td align="center" width="25" class="font4">MISC<br />MODIFIER</td>
-<td align="center"></td>
-<td align="center" width="25" class="font4">TEMPORARY<br />MODIFIER</td>
-</tr>
-<tr>
-<td align="center" bgcolor="black"><font style="font-size:10pt" color="white"><b>MELEE</b></font><font style="font-size:5pt" color="white"><br />ATTACK BONUS</font></td>
-<td align="center" class="border10"><b>|ATTACK.MELEE.TOTAL|</b></td>
-<td align="center" class="font7"><b>=</b></td>
-<td align="center" class="border10"><b>|ATTACK.MELEE|<br /></b></td>
-<td align="center" class="font7"><b>+</b></td>
-<td align="center" class="border10"><b>|ATTACK.MELEE.STAT|</b></td>
-<td align="center" class="font7"><b>+</b></td>
-<td align="center" class="border10"><b>|ATTACK.MELEE.SIZE|<br /></b></td>
-<td align="center" class="font7"><b>+</b></td>
-<td align="center" class="border10"><b>|ATTACK.MELEE.MISC|<br /></b></td>
-<td align="center" class="font7"><b>+</b></td>
-<td align="center" class="tempborder"><br /></td>
-</tr>
-<tr>
-<td align="center" bgcolor="black"><font style="font-size:10pt" color="white"><b>RANGED</b></font><font style="font-size:5pt" color="white"><br />ATTACK BONUS</font></td>
-<td align="center" class="border10"><b>|ATTACK.RANGED.TOTAL|</b></td>
-<td align="center" class="font7"><b>=</b></td>
-<td align="center" class="border10"><b>|ATTACK.RANGED|<br /></b></td>
-<td align="center" class="font7"><b>+</b></td>
-<td align="center" class="border10"><b>|ATTACK.RANGED.STAT|</b></td>
-<td align="center" class="font7"><b>+</b></td>
-<td align="center" class="border10"><b>|ATTACK.RANGED.SIZE|<br /></b></td>
-<td align="center" class="font7"><b>+</b></td>
-<td align="center" class="border10"><b>|ATTACK.RANGED.MISC|<br /></b></td>
-<td align="center" class="font7"><b>+</b></td>
-<td align="center" class="tempborder"><br /></td>
-</tr>
-<tr>
-<td align="center"></td>
-<td align="center" width="60" class="font4">TOTAL</td>
-<td align="center"></td>
-<td align="center" width="60" class="font4">BASE ATTACK BONUS</td>
-<td align="center"></td>
-<td align="center" width="25" class="font4">DEX<br />MODIFIER</td>
-<td align="center"></td>
-<td align="center" width="25" class="font4">SIZE<br />MODIFIER</td>
-<td align="center"></td>
-<td align="center" width="25" class="font4">MISC<br />MODIFIER</td>
-<td align="center"></td>
-<td align="center" width="25" class="font4">TEMPORARY<br />MODIFIER</td>
-</tr>
-</table>
+   <table width="100%" summary="Melee ~ Ranged Attacks">
+    <tr>
+     <td align="center" width="75"></td>
+     <td align="center" valign="bottom" class="lable">TOTAL</td>
+     <td align="center"></td>
+     <td align="center" valign="bottom" class="lable">BASE ATTACK</td>
+     <td align="center"></td>
+     <td align="center" width="25" valign="bottom" class="lable">STAT</td>
+     <td align="center"></td>
+     <td align="center" width="25" valign="bottom" class="lable">SIZE</td>
+     <td align="center"></td>
+     <td align="center" width="25" valign="bottom" class="lable">EPIC</td>
+     <td align="center"></td>
+     <td align="center" width="25" valign="bottom" class="lable">MISC</td>
+     <td align="center"></td>
+     <td align="center" width="25" valign="bottom" class="lable">TEMP</td>
+    </tr>
+    <tr>
+     <td align="center" class="ab"><b>MELEE</b><br /><span class="ablable">ATTACK BONUS</span></td>
+     <td align="center" class="border10"><b>|ATTACK.MELEE.TOTAL|</b></td>
+     <td align="center" class="sign"><b>=</b></td>
+     <td align="center" class="border10"><b>|ATTACK.MELEE|</b></td>
+     <td align="center" class="sign"><b>+</b></td>
+     <td align="center" class="border10"><b>|ATTACK.MELEE.STAT|</b></td>
+     <td align="center" class="sign"><b>+</b></td>
+     <td align="center" class="border10"><b>|ATTACK.MELEE.SIZE|</b></td>
+     <td align="center" class="sign"><b>+</b></td>
+     <td align="center" class="border10"><b>|ATTACK.MELEE.EPIC|</b></td>
+     <td align="center" class="sign"><b>+</b></td>
+     <td align="center" class="border10"><b>|ATTACK.MELEE.MISC|</b></td>
+     <td align="center" class="sign"><b>+</b></td>
+     <td align="center"  class="abt"></td>
+    </tr>
+    <tr>
+     <td align="center" class="ab"><b>RANGED</b><br /><span class="ablable">ATTACK BONUS</span></td>
+     <td align="center" class="border10"><b>|ATTACK.RANGED.TOTAL|</b></td>
+     <td align="center" class="sign"><b>=</b></td>
+     <td align="center" class="border10"><b>|ATTACK.RANGED|</b></td>
+     <td align="center" class="sign"><b>+</b></td>
+     <td align="center" class="border10"><b>|ATTACK.RANGED.STAT|</b></td>
+     <td align="center" class="sign"><b>+</b></td>
+     <td align="center" class="border10"><b>|ATTACK.RANGED.SIZE|</b></td>
+     <td align="center" class="sign"><b>+</b></td>
+     <td align="center" class="border10"><b>|ATTACK.RANGED.EPIC|</b></td>
+     <td align="center" class="sign"><b>+</b></td>
+     <td align="center" class="border10"><b>|ATTACK.RANGED.MISC|</b></td>
+     <td align="center" class="sign"><b>+</b></td>
+     <td align="center"  class="abt"></td>
+    </tr>
+|IIF(VAR.UseCombatManueverBonus:1)|
+    <tr>
+     <td align="center" class="ab"><b>CMB</b><br /><span class="ablable">ATTACK BONUS</span></td>
+     <td align="center" class="border10"><b>|VAR.CMB.INTVAL.SIGN|</b></td>
+     <td align="center" class="sign"><b>=</b></td>
+     <td align="center" class="border10"><b>|ATTACK.MELEE.BASE|</b></td>
+     <td align="center" class="sign"><b>+</b></td>
+     <td align="center" class="border10"><b>|VAR.CMB_STAT.INTVAL.SIGN|</b></td>
+     <td align="center" class="sign"><b>+</b></td>
+     <td align="center" class="border10"><b>|VAR.CMB_SizeMod.INTVAL.SIGN|</b></td>
+     <td align="center" class="sign"><b>+</b></td>
+     <td align="center" class="border10"><b>+0</b></td>
+     <td align="center" class="sign"><b>+</b></td>
+     <td align="center" class="border10"><b>|VAR.CMB-ATTACK.MELEE.BASE-VAR.CMB_STAT-VAR.CMB_SizeMod.INTVAL.SIGN|</b></td>
+     <td align="center" class="sign"><b>+</b></td>
+     <td align="center"  class="abt"></td>
+    </tr>
+	    <tr>
+     <td align="center" class="ab"><b>ICE</b><br /><span class="ablable">ATTACK BONUS</span></td>
+     <td align="center" class="border10"><b>|VAR.ICE.INTVAL.SIGN|</b></td>
+     <td align="center" class="sign"><b>=</b></td>
+     <td align="center" class="border10"><b>|ATTACK.ICE.BASE|</b></td>
+     <td align="center" class="sign"><b>+</b></td>
+     <td align="center" class="border10"><b>|VAR.ICE_STAT.INTVAL.SIGN|</b></td>
+     <td align="center" class="sign"><b>+</b></td>
+     <td align="center" class="border10"><b>|VAR.ICE_SizeMod.INTVAL.SIGN|</b></td>
+     <td align="center" class="sign"><b>+</b></td>
+     <td align="center" class="border10"><b>+0</b></td>
+     <td align="center" class="sign"><b>+</b></td>
+     <td align="center" class="border10"><b>|VAR.CMB-ATTACK.MELEE.BASE-VAR.CMB_STAT-VAR.CMB_SizeMod.INTVAL.SIGN|</b></td>
+     <td align="center" class="sign"><b>+</b></td>
+     <td align="center"  class="abt"></td>
+    </tr>
+    <tr><td></td></tr>
+   </table>
+   <table width="100%" summary="CMB block">
+    <tr>
+     <td align="center" class="ab"><b>OFFENSE</b></td>
+     <td align="center" class="border10"><b>|VAR.CMB_Grapple.INTVAL.SIGN|</b></td>
+     <td align="center" class="border10"><b>|VAR.CMB_Trip.INTVAL.SIGN|</b></td>
+     <td align="center" class="border10"><b>|VAR.CMB_Disarm.INTVAL.SIGN|</b></td>
+     <td align="center" class="border10"><b>|VAR.CMB_Sunder.INTVAL.SIGN|</b></td>
+     <td align="center" class="border10"><b>|VAR.CMB_Bull.INTVAL.SIGN|</b></td>
+     <td align="center" class="border10"><b>|VAR.CMB_Overrun.INTVAL.SIGN|</b></td>
+    </tr>
+    <tr>
+     <td align="center" class="ab"><b>DEFENSE</b></td>
+     <td align="center" class="border10"><b>|VAR.CMB_Grapple_DEF.INTVAL|</b></td>
+     <td align="center" class="border10"><b>|VAR.CMB_Trip_DEF.INTVAL|</b></td>
+     <td align="center" class="border10"><b>|VAR.CMB_Disarm_DEF.INTVAL|</b></td>
+     <td align="center" class="border10"><b>|VAR.CMB_Sunder_DEF.INTVAL|</b></td>
+     <td align="center" class="border10"><b>|VAR.CMB_Bull_DEF.INTVAL|</b></td>
+     <td align="center" class="border10"><b>|VAR.CMB_Overrun_DEF.INTVAL|</b></td>
+    </tr>
+    <tr>
+     <td align="center" width="28%"></td>
+     <td align="center" width="12%" valign="top" class="lable">GRAPPLE</td>
+     <td align="center" width="12%" valign="top" class="lable">TRIP</td>
+     <td align="center" width="12%" valign="top" class="lable">DISARM</td>
+     <td align="center" width="12%" valign="top" class="lable">SUNDER</td>
+     <td align="center" width="12%" valign="top" class="lable">BULL RUSH</td>
+     <td align="center" width="12%" valign="top" class="lable">OVERRUN</td>
+    </tr>
+   </table>
+   <br />
+      <table width="100%" summary="ICE block">
+    <tr>
+     <td align="center" class="ab"><b>OFFENSE</b></td>
+     <td align="center" class="border10"><b>|VAR.ICE_Grapple.INTVAL.SIGN|</b></td>
+     <td align="center" class="border10"><b>|VAR.CMB_Trip.INTVAL.SIGN|</b></td>
+     <td align="center" class="border10"><b>|VAR.CMB_Disarm.INTVAL.SIGN|</b></td>
+     <td align="center" class="border10"><b>|VAR.CMB_Sunder.INTVAL.SIGN|</b></td>
+     <td align="center" class="border10"><b>|VAR.CMB_Bull.INTVAL.SIGN|</b></td>
+     <td align="center" class="border10"><b>|VAR.CMB_Overrun.INTVAL.SIGN|</b></td>
+    </tr>
+    <tr>
+     <td align="center" class="ab"><b>DEFENSE</b></td>
+     <td align="center" class="border10"><b>|VAR.CMB_Grapple_DEF.INTVAL|</b></td>
+     <td align="center" class="border10"><b>|VAR.CMB_Trip_DEF.INTVAL|</b></td>
+     <td align="center" class="border10"><b>|VAR.CMB_Disarm_DEF.INTVAL|</b></td>
+     <td align="center" class="border10"><b>|VAR.CMB_Sunder_DEF.INTVAL|</b></td>
+     <td align="center" class="border10"><b>|VAR.CMB_Bull_DEF.INTVAL|</b></td>
+     <td align="center" class="border10"><b>|VAR.CMB_Overrun_DEF.INTVAL|</b></td>
+    </tr>
+    <tr>
+     <td align="center" width="28%"></td>
+     <td align="center" width="12%" valign="top" class="lable">GRAPPLE</td>
+     <td align="center" width="12%" valign="top" class="lable">TRIP</td>
+     <td align="center" width="12%" valign="top" class="lable">DISARM</td>
+     <td align="center" width="12%" valign="top" class="lable">SUNDER</td>
+     <td align="center" width="12%" valign="top" class="lable">BULL RUSH</td>
+     <td align="center" width="12%" valign="top" class="lable">OVERRUN</td>
+    </tr>
+   </table>
+   <br />
+
+|ELSE|
+    <tr>
+     <td align="center" class="ab"><b>GRAPPLE</b><br /><span class="ablable">ATTACK BONUS</span></td>
+     <td align="center" class="border10"><b>|ATTACK.GRAPPLE.TOTAL|</b></td>
+     <td align="center" class="sign"><b>=</b></td>
+     <td align="center" class="border10"><b>|ATTACK.GRAPPLE|</b></td>
+     <td align="center" class="sign"><b>+</b></td>
+     <td align="center" class="border10"><b>|ATTACK.GRAPPLE.STAT|</b></td>
+     <td align="center" class="sign"><b>+</b></td>
+     <td align="center" class="border10"><b>|ATTACK.GRAPPLE.SIZE|</b></td>
+     <td align="center" class="sign"><b>+</b></td>
+     <td align="center" class="border10"><b>|ATTACK.GRAPPLE.EPIC|</b></td>
+     <td align="center" class="sign"><b>+</b></td>
+     <td align="center" class="border10"><b>|ATTACK.GRAPPLE.MISC|</b></td>
+     <td align="center" class="sign"><b>+</b></td>
+     <td align="center"  class="abt"></td>
+    </tr>
+    <tr><td></td></tr>
+   </table>
+   <br />
+|ENDIF|
 <!-- STOP Melee and Range Attack Table -->
 <!-- START Unarmed Attack Table -->
 <table summary="formatting table" cellpadding="0" cellspacing="0" border="0" width="100%">
