--- a/installers/release-notes/pcgen-release-notes-5173.html
+++ b/installers/release-notes/pcgen-release-notes-5173.html
@@ -30,7 +30,7 @@
 <p>PCGen v5.17.3 is an alpha release from our development branch to allow 
 experimentation and testing of our latest work.  
 Please give it a shot and let us know how it works for you.
-		 Some notable changes in this release are listed below.
+	<!-- 	 Some notable changes in this release are listed below.  -->
 </p><p>
 We are also working away on the    
 <a href="http://wiki.pcgen.org/index.php?title=Release_6.0.x">next big version</a> 
