--- a/preview/d20/fantasy/preview.html
+++ b/preview/d20/fantasy/preview.html
@@ -666,7 +666,7 @@ Immune
 									<tr>
 										<td>
 <!-- START Weapon Table -->
-|FOR,%weap,0,2,1,0|
+|FOR,%weap,0,COUNT[EQTYPE.Weapon]-1,1,0|
 |%WEAPON.%weap.NAME|
 											<table class="noborder" cellpadding="0" width="100%" cellspacing="0" summary="Weapon Table">
 												<tr>
